Revert "[FIX] Contrast issue for highlighted forum posts in dark mode"
This reverts merge request !6108

--- a/themes/darkly/css/darkly.scss
+++ b/themes/darkly/css/darkly.scss
@@ -35,7 +35,3 @@
     margin-top: .5rem;
     margin-bottom: .5rem;
 }
-
-.card-body {
-    background-color: var(--bs-secondary-bg)!important;
-}
